--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,27 @@
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
 asgiref==3.7.2
+attrs==23.1.0
 bcrypt==4.0.1
 cffi==1.16.0
+cryptography==41.0.5
 Django==4.2.7
 django-hashid-field==3.3.7
 django-model-utils==4.3.1
+djangorestframework==3.14.0
+djangorestframework-simplejwt==5.3.0
+drf-spectacular==0.26.5
 hashids==1.3.1
+inflection==0.5.1
 install==1.3.5
+jsonschema==4.19.2
+jsonschema-specifications==2023.7.1
 pycparser==2.21
+PyJWT==2.8.0
+pytz==2023.3.post1
+PyYAML==6.0.1
+referencing==0.30.2
+rpds-py==0.12.0
 sqlparse==0.4.4
 typing_extensions==4.8.0
+uritemplate==4.1.1
