--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,11 @@ bcrypt==4.0.1
 cffi==1.16.0
 cryptography==41.0.5
 Django==4.2.7
+django-cors-headers==4.3.0
+django-environ==0.11.2
 django-hashid-field==3.3.7
 django-model-utils==4.3.1
+django-rest-registration==0.8.2
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
 drf-spectacular==0.26.5
