--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,23 @@
 aiohttp==3.8.6
 aiohttp-retry==2.8.3
 aiosignal==1.3.1
+amqp==5.2.0
+annotated-types==0.6.0
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
 asgiref==3.7.2
 async-timeout==4.0.3
 attrs==23.1.0
 bcrypt==4.0.1
+billiard==4.2.0
+celery==5.3.5
 certifi==2023.7.22
 cffi==1.16.0
 charset-normalizer==3.3.2
+click==8.1.7
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.3.0
 cryptography==41.0.5
 Django==4.2.7
 django-anymail==10.2
@@ -28,20 +36,29 @@ inflection==0.5.1
 install==1.3.5
 jsonschema==4.19.2
 jsonschema-specifications==2023.7.1
+kombu==5.3.4
+mailtrap==2.0.1
+multidict==6.0.4
+overrides==7.4.0
+prompt-toolkit==3.0.41
 pycparser==2.21
+pydantic==2.5.1
+pydantic_core==2.14.3
 PyJWT==2.8.0
 pyotp==2.9.0
+python-dateutil==2.8.2
 pytz==2023.3.post1
 PyYAML==6.0.1
 referencing==0.30.2
 requests==2.31.0
 rpds-py==0.12.0
+six==1.16.0
 sqlparse==0.4.4
 twilio==8.10.1
 typing_extensions==4.8.0
+tzdata==2023.3
 uritemplate==4.1.1
 urllib3==2.1.0
+vine==5.1.0
+wcwidth==0.2.11
 yarl==1.9.2
-
-pydantic~=2.5.1
-overrides~=7.4.0
