--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -14,6 +14,7 @@ jobs:
       max-parallel: 4
       matrix:
         python-version: ['3.10']
+    environment: dev
 
     steps:
     - uses: actions/checkout@v3
