--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -26,6 +26,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+    - name: Show repo env secret
+      run: |
+          echo ${{ secrets.SECRET_KEY }}
     - name: Run Tests
       run: |
         python manage.py test
