--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -5,6 +5,7 @@ on:
     branches: [ "develop" ]
   pull_request:
     branches: [ "develop" ]
+env: dev
 
 jobs:
   build:
@@ -14,7 +15,6 @@ jobs:
       max-parallel: 4
       matrix:
         python-version: ['3.10']
-    environment: dev
 
     steps:
     - uses: actions/checkout@v3
@@ -26,9 +26,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    - name: Show repo env secret
+    - name: Show repo env COUNTRY_CODE
       run: |
-        echo ${{ secrets.SECRET_KEY }}
+        echo ${{ var.COUNTRY_CODE }}
     - name: Run Tests
       run: |
         python manage.py test
