--- a/requirements.txt
+++ b/requirements.txt
@@ -1,47 +1,15 @@
-aiohttp==3.8.6
-aiohttp-retry==2.8.3
-aiosignal==1.3.1
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-asgiref==3.7.2
-async-timeout==4.0.3
-attrs==23.1.0
-bcrypt==4.0.1
-certifi==2023.7.22
-cffi==1.16.0
-charset-normalizer==3.3.2
-cryptography==41.0.5
-Django==4.2.7
-django-anymail==10.2
-django-cors-headers==4.3.0
-django-environ==0.11.2
-django-hashid-field==3.3.7
-django-model-utils==4.3.1
-django-rest-registration==0.8.2
-djangorestframework==3.14.0
-djangorestframework-simplejwt==5.3.0
-drf-spectacular==0.26.5
-frozenlist==1.4.0
-hashids==1.3.1
-idna==3.4
-inflection==0.5.1
-install==1.3.5
-jsonschema==4.19.2
-jsonschema-specifications==2023.7.1
-pycparser==2.21
-PyJWT==2.8.0
-pyotp==2.9.0
-pytz==2023.3.post1
-PyYAML==6.0.1
-referencing==0.30.2
-requests==2.31.0
-rpds-py==0.12.0
-sqlparse==0.4.4
-twilio==8.10.1
-typing_extensions==4.8.0
-uritemplate==4.1.1
-urllib3==2.1.0
-yarl==1.9.2
-
-pydantic~=2.5.1
-overrides~=7.4.0
+bcrypt
+Django
+django-anymail
+django-cors-headers
+django-environ
+django-hashid-field
+django-model-utils
+django-rest-registration
+djangorestframework
+djangorestframework-simplejwt
+drf-spectacular
+PyJWT
+pyotp
+twilio
+pydantic
